# ChangeLog for net-mail/rss2email
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Sep 2010; James Rowe <jnrowe@gmail.com>
  -files/rss2email-2.65-X-rss-feed.patch:
  Removed unused patch file.

*rss2email-2.67 (21 Sep 2010)

  21 Sep 2010; James Rowe <jnrowe@gmail.com> +rss2email-2.67.ebuild:
  Version bump [#182].

  02 Jun 2010; James Rowe <jnrowe@gmail.com> -rss2email-2.65.1.ebuild:
  Removed obsolete ebuild.

  25 Mar 2010; James Rowe <jnrowe@gmail.com> rss2email-2.66.ebuild:
  Keyworded x86.

  25 Mar 2010; James Rowe <jnrowe@gmail.com> rss2email-2.66.ebuild:
  Keyworded amd64.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> rss2email-2.65.1.ebuild,
  rss2email-2.66.ebuild:
  Added PYTHON_DEPEND setting.

*rss2email-2.66 (23 Feb 2010)

  23 Feb 2010; James Rowe <jnrowe@gmail.com> +rss2email-2.66.ebuild,
  +files/rss2email-2.66-Resynced-debian-2.65-1.patch:
  Version bump.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> rss2email-2.65.1.ebuild:
  Set SUPPORT_PYTHON_ABIS [205].

  01 Aug 2009; James Rowe <jnrowe@gmail.com> rss2email-2.65.1.ebuild:
  Don't refer to config file directly, as the name may change dependent on
  $PORTAGE_COMPRESS.

  01 Aug 2009; James Rowe <jnrowe@gmail.com> rss2email-2.65.1.ebuild,
  +files/rss2email-2.65-X-rss-feed.patch,
  +files/rss2email-2.65-r2e-chmod.patch:
  Pulled in patches from upstream ebuild.

  13 Jul 2009; James Rowe <jnrowe@gmail.com> rss2email-2.65.1.ebuild:
  Added no-op src_compile() as distutils' src_compile() breaks the build.

  10 Jun 2009; James Rowe <jnrowe@gmail.com> rss2email-2.65.1.ebuild:
  Keyworded amd64.

  08 May 2009; James Rowe <jnrowe@gmail.com> rss2email-2.65.1.ebuild:
  Removed redundant src_compile().

  07 May 2009; James Rowe <jnrowe@gmail.com> rss2email-2.65.1.ebuild:
  Whitespace removal, to fix pcheck warning.

*rss2email-2.65.1 (02 May 2009)

  02 May 2009; jnrowe@gmail.com +rss2email-2.65.1.ebuild, +metadata.xml: