@@ -1,0 +1,22 @@
+dev-lang/python >=app-admin/eselect-python-20091230 dev-lang/python
+dev-python/feedparser >=app-admin/eselect-python-20091230 dev-lang/python
+0
+http://www.allthingsrss.com/rss2email/rss2email-2.68.tar.gz
+
+http://www.allthingsrss.com/rss2email/
+GPL-2
+A python script that converts RSS newsfeeds to email
+~amd64 ~x86
+distutils eutils multilib portability python toolchain-funcs
+
+
+
+
+3
+
+compile install postinst postrm prepare setup
+
+
+
+
+
