@@ -5,14 +5,16 @@ AUX rss2email-2.65-r2e-chmod.patch 331 RMD160 cce36745c2658bc87d6df28361366b915c
 AUX rss2email-2.66-Resynced-debian-2.65-1.patch 3820 RMD160 4248c6af3acd0b462bddd363aad3c1a309527ca4 SHA1 8f86dc15ddf18c156e02b0a246ad745b7d709bd0 SHA256 973a037eb99e0ba9a1ca400bffbdb55026c94b976c469b7ee9265c5d31f1c859
 DIST rss2email-2.66.tar.gz 57325 RMD160 c2e270a810a24b7ba04c47d8d5dd6e32bdd567ea SHA1 cc5ff08950d6b4bc8f450daba5e0a74df81ced34 SHA256 7ec48e1158c0a3041ed812e5d2ac2d8815337156a4d813ec6cff66b9397dfb24
 DIST rss2email-2.67.tar.gz 58489 RMD160 3b782296fbe927efdb70a2767194206292ca3338 SHA1 93a86dc686a352f2e4fa9bbbfdc27c019c367157 SHA256 6fe5efdc8ec286f43f0399dd9b95b44a6296faa5cf95e86495d50f0bc62c1590
+DIST rss2email-2.68.tar.gz 59120 RMD160 bf71e243a59f520ec165e6a8e34b740fe5fe6de1 SHA1 a8bb6335fcdb3f42e0dd31f6a125765db3a16365 SHA256 946aefca2bf3f7e47c088bbd12ae52f9cdebc594214e07ca86eec264943ce502
 EBUILD rss2email-2.66.ebuild 1542 RMD160 4c4e617cd25d4a5c6859b3d420491b30a3fe28c1 SHA1 18aaf9b09d2cb3b7bc4774a30508b1a5790b2dbb SHA256 f4415938a4d63a1dc690cf09ce24a479f5bfef4e44352e28b7cd7c9e4b4987c9
 EBUILD rss2email-2.67.ebuild 1524 RMD160 d9dca24815450d7202681ee14e5d82f75bbfdfa1 SHA1 1086368c669edd0013c247d537e7516ff0e3e557 SHA256 11461740c0f37d271761eda1bf288f6c6d56c3396aa5a6bbcbcee3146e880106
-MISC ChangeLog 2005 RMD160 3ab836cdc43cf68fcb5f9a65299978989276c42f SHA1 df6ff8a39547697b0e9131d956ec64dd49654973 SHA256 f9faf347257c51207a1d6b9e97ddce2ae386cdb6d0fcb65c9c686e9c04c5b917
+EBUILD rss2email-2.68.ebuild 1551 RMD160 fad45665ddad461f8328270a587b722797291fa0 SHA1 348c134cbfc4cdb7872cd425d7635b4667e68f20 SHA256 c7a39b57d682ee8c502d40060136113ccefc738de0313bd7ca1c5ba17fc0bdbc
+MISC ChangeLog 2129 RMD160 68bbb64bce3cb43f87de6915bf6d914ade8c3ba5 SHA1 fa307344df569785c931a80012ab96149334d7bc SHA256 d9c261057e543d938141b9ee364a8df326d198b1a9c9f65667e7eded00e6769e
 MISC metadata.xml 1139 RMD160 d35862e8537c80edb280a9a0cf97a3d737f8bee7 SHA1 edd74d0c51887215cf29525604847fb49df07236 SHA256 27ee299ca7885b461f767b7912c9e3550e397892399be8f42c4422ea24957602
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyZAiMACgkQzJrj3cAXR0nfOwCdFX7MPMq/1W4niwBwNA8iZKB9
-0AcAoLYOmmRInQ0J4peo7RMTudMxT/8R
-=f7JX
+iEYEARECAAYFAkynNeAACgkQzJrj3cAXR0kfFgCgsaObn7phmNYEcoCQZ/98dEdh
+N/8AnRv185jKY5W07GTEBlFD+GH3NnhD
+=/Ub3
 -----END PGP SIGNATURE-----
