@@ -44,5 +44,7 @@ REM 2010-10-23 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-db/spatialite-tool
 REM 2010-10-23 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-db/spatialite-tools-2.3.1 %a
 REM 2010-10-28 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-util/cram-0.3 %a
 REM 2010-10-28 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-util/cram-0.3 %a
+REM 2010-11-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 net-mail/rss2email-2.68 %a
+REM 2010-11-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 net-mail/rss2email-2.68 %a
 
 # vim: set sw=4 sts=4 et tw=120 fenc=utf-8 ft=remind:
